--- a/BuyOrBid/appsettings.json
+++ b/BuyOrBid/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BuyOrBidDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BuyOrBidDb2;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
